--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -15,6 +15,9 @@ p3-challenger = {workspace = true}
 p3-uni-stark = {workspace = true}
 p3-circle = {workspace = true}
 p3-fri = {workspace = true}
+p3-matrix = {workspace = true}
+
+lazy_static = "1.5.0"
 
 [dev-dependencies]
 rand = {workspace = true}
