--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,16 @@ ark-ff = "0.4.2"
 num-bigint = "0.4.6"
 sha3 = "0.10.8"
 
+hmac = "0.12"
+sha2 = "0.10"
+bip39 = "2.0"
+base58 = "0.2"
+
+
+
+bincode = { version = "1.3", default-features = false }
+
 [dev-dependencies]
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-bincode = "1.3"
 rand = "0.8.5"
+libc-print = "0.1.22"
