--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,6 +11,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 p3-mersenne-31 = { workspace = true }
+p3-field = { workspace = true }
 p3-poseidon2 = { workspace = true }
 axum = { workspace = true, features = ["multipart"] }
 dotenv = { workspace = true }
@@ -19,5 +20,6 @@ clap = { workspace = true }
 serde = { workspace = true }
 bincode = { workspace = true }
 m31jubjub = { workspace = true }
+base64 = { workspace = true }
 
 zeropool-sharded-storage-common = { path = "../common" }
