--- a/spora/Cargo.toml
+++ b/spora/Cargo.toml
@@ -6,13 +6,16 @@ edition = "2021"
 [dependencies]
 p3-circle = {workspace = true}
 p3-matrix = {workspace = true}
-p3-mersenne-31 = {workspace = true}
 p3-field = {workspace = true}
 
 itertools = {workspace = true}
 p3-maybe-rayon = {workspace = true}
 p3-challenger = {workspace = true}
 p3-util = {workspace = true}
-libc-print = {workspace = true}
+p3-symmetric = {workspace = true}
+
 
 primitives = {path = "../primitives"}
+
+[dev-dependencies]
+libc-print = {workspace = true}
