--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [ "primitives", "sealing","shards"
-, "spora"]
+, "spora", "storage"]
 
 
 [workspace.dependencies]
