--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -27,3 +27,8 @@ rand = {workspace = true}
 rand_chacha = {workspace = true}
 sha3 = {workspace = true}
 
+criterion = "0.5"
+
+[[bench]]
+name = "poseidon2"
+harness = false
