Edit OptimisticCorrectableCommitment to make it corresponding to the article. Add hashing for it.

--- a/shards/Cargo.toml
+++ b/shards/Cargo.toml
@@ -13,6 +13,7 @@ p3-field = {workspace = true}
 p3-matrix = {workspace = true}
 p3-maybe-rayon = {workspace = true}
 p3-util = {workspace = true}
+p3-symmetric = {workspace = true}
 
 itertools = {workspace = true}
 primitives = {path = "../primitives"}
