--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ resolver = "2"
 members = [
     "node",
     "common",
+    "validator",
     "client",
+    "contract-mock",
     "tests",
     "primitives",
     "shards",
@@ -40,6 +42,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 libp2p = "0.54.1"
 axum = "0.7.7"
+reqwest = "0.12.9"
 clap = "4.5.19"
 dotenv = "0.15.0"
 tokio = "1.40.0"
