--- a/contract-mock/Cargo.toml
+++ b/contract-mock/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zeropool-sharded-storage-validator"
+name = "zeropool-sharded-storage-contract-mock"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,7 +12,7 @@ color-eyre = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing = { workspace = true }
 dotenv = { workspace = true }
-libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde"] }
+rand = { workspace = true }
 
-shards = { path = "../shards" }
 zeropool-sharded-storage-common = { path = "../common" }
+primitives = { path = "../primitives" }
