--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 color-eyre = { workspace = true }
-libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "rendezvous", "relay", "ping", "kad", "request-response", "gossipsub", "cbor"] }
+libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde"] }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -16,7 +16,7 @@ p3-poseidon2 = { workspace = true }
 axum = { workspace = true, features = ["multipart"] }
 dotenv = { workspace = true }
 serde_json = { workspace = true }
-clap = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
 serde = { workspace = true }
 bincode = { workspace = true }
 m31jubjub = { workspace = true }
