--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,6 @@ bincode = "1.3"
 itertools = "0.13.0"
 libc-print = "0.1.22"
 sha3 = "0.10"
-
 color-eyre = "0.6.3"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -49,4 +48,7 @@ clap = "4.5.19"
 dotenv = "0.15.0"
 tokio = "1.40.0"
 base64 = "0.22.1"
+toml = { version = "0.8.19" }
+m31jubjub = { git = "https://github.com/zeropoolnetwork/m31jubjub" }
+
 
