--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zeropool-sharded-storage-validator"
+name = "validator"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,6 +13,10 @@ tracing-subscriber = { workspace = true }
 tracing = { workspace = true }
 dotenv = { workspace = true }
 libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde"] }
+m31jubjub = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+bincode = { workspace = true }
 
 shards = { path = "../shards" }
-zeropool-sharded-storage-common = { path = "../common" }
+common = { path = "../common" }
+primitives = { path = "../primitives" }
