--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zeropool-sharded-storage-common"
+name = "common"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,7 @@ p3-mersenne-31 = { workspace = true }
 p3-poseidon2 = { workspace = true }
 p3-symmetric = { workspace = true }
 p3-field = { workspace = true }
-serde = "1.0.207"
+serde = { workspace = true }
+m31jubjub = { workspace = true }
+
+primitives = { path = "../primitives" }
