--- a/contract-mock/Cargo.toml
+++ b/contract-mock/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zeropool-sharded-storage-contract-mock"
+name = "contract-mock"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,12 +7,12 @@ edition = "2021"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
-axum = { workspace = true }
+axum = { workspace = true, features = ["macros"] }
 color-eyre = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing = { workspace = true }
 dotenv = { workspace = true }
 rand = { workspace = true }
 
-zeropool-sharded-storage-common = { path = "../common" }
+common = { path = "../common" }
 primitives = { path = "../primitives" }
