--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zeropool-sharded-storage-node"
+name = "node"
 version = "0.1.0"
 edition = "2021"
 
@@ -19,7 +19,9 @@ serde_json = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 serde = { workspace = true }
 bincode = { workspace = true }
-#m31jubjub = { workspace = true }
+m31jubjub = { workspace = true }
 base64 = { workspace = true }
 
-zeropool-sharded-storage-common = { path = "../common" }
+common = { path = "../common" }
+primitives = { path = "../primitives" }
+snapshot-db = { path = "../snapshotdb" }
