--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 color-eyre = { workspace = true }
-libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde"] }
+libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde", "mdns"] }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -21,7 +21,9 @@ serde = { workspace = true }
 bincode = { workspace = true }
 m31jubjub = { workspace = true }
 base64 = { workspace = true }
+p3-matrix = { workspace = true }
 
 common = { path = "../common" }
 primitives = { path = "../primitives" }
 snapshot-db = { path = "../snapshotdb" }
+shards = { path = "../shards" }
