--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -14,5 +14,10 @@ m31jubjub = { workspace = true }
 reqwest = { workspace = true, features = ["multipart", "json"] }
 color-eyre = { workspace = true }
 bincode = { workspace = true }
+rand = { workspace = true }
+hex = { workspace = true, features = ["serde"] }
+static_assertions = "1.1.0"
+ark-serialize = "0.4.2"
+serde_with = "3.11.0"
 
 primitives = { path = "../primitives" }
