--- a/contract-mock/Cargo.toml
+++ b/contract-mock/Cargo.toml
@@ -12,7 +12,8 @@ color-eyre = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing = { workspace = true }
 dotenv = { workspace = true }
-rand = { workspace = true }
+bincode = { workspace = true }
+tower-http = { workspace = true, features = ["trace"] }
 
 common = { path = "../common" }
 primitives = { path = "../primitives" }
