--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,6 +22,7 @@ bincode = { workspace = true }
 m31jubjub = { workspace = true }
 base64 = { workspace = true }
 p3-matrix = { workspace = true }
+tower-http = { workspace = true, features = ["trace"] }
 
 common = { path = "../common" }
 primitives = { path = "../primitives" }
