--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,6 +16,7 @@ color-eyre = { workspace = true }
 bincode = { workspace = true }
 rand = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
+tracing = { workspace = true }
 static_assertions = "1.1.0"
 ark-serialize = "0.4.2"
 serde_with = "3.11.0"
