--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,32 @@
 [workspace]
 resolver = "2"
-members = [ "primitives", "sealing","shards"
-, "spora", "snapshotdb"]
-
+members = [
+    "primitives",
+    "sealing",
+    "shards",
+    "spora",
+    "snapshotdb",
+    "node",
+    "common",
+    "client",
+    "contract-mock",
+]
 
 [workspace.dependencies]
-p3-circle = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-challenger = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-commit = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-dft = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-field = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-fri = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-matrix = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-maybe-rayon = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-util = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-mersenne-31 = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-merkle-tree = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-symmetric = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-poseidon2 = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-p3-uni-stark = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
-
-
+p3-circle = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-challenger = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-commit = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-dft = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-field = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-fri = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-matrix = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-maybe-rayon = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-util = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-mersenne-31 = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-merkle-tree = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-symmetric = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-poseidon2 = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-uni-stark = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
 
 rand_core = "0.6.4"
 rand = "0.8.5"
@@ -31,3 +37,19 @@ bincode = "1.3"
 itertools = "0.13.0"
 libc-print = "0.1.22"
 sha3 = "0.10"
+color-eyre = "0.6.3"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+libp2p = "0.54.1"
+axum = "0.7.7"
+reqwest = "0.12.9"
+clap = "4.5.19"
+dotenv = "0.15.0"
+tokio = "1.40.0"
+base64 = "0.22.1"
+toml = { version = "0.8.19" }
+m31jubjub = { git = "https://github.com/zeropoolnetwork/m31jubjub" }
+hex = "0.4.3"
+tower-http = "0.6.2"
+futures = "0.3.31"
+
