--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -23,6 +23,7 @@ m31jubjub = { workspace = true }
 base64 = { workspace = true }
 p3-matrix = { workspace = true }
 tower-http = { workspace = true, features = ["trace"] }
+reqwest = { workspace = true }
 
 common = { path = "../common" }
 primitives = { path = "../primitives" }
