Add prover for SPoRA

--- a/spora/Cargo.toml
+++ b/spora/Cargo.toml
@@ -13,6 +13,7 @@ p3-maybe-rayon = {workspace = true}
 p3-challenger = {workspace = true}
 p3-util = {workspace = true}
 p3-symmetric = {workspace = true}
+p3-commit = {workspace = true}
 
 
 primitives = {path = "../primitives"}
