Use fixed p3 revs and local m31jubjub

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,23 +10,24 @@ members = [
     "common",
     "client",
     "contract-mock",
+    "m31jubjub",
 ]
 
 [workspace.dependencies]
-p3-circle = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-challenger = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-commit = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-dft = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-field = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-fri = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-matrix = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-maybe-rayon = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-util = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-mersenne-31 = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-merkle-tree = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-symmetric = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-poseidon2 = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
-p3-uni-stark = { git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility" }
+p3-circle = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-challenger = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-commit = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-dft = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-field = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-fri = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-matrix = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-maybe-rayon = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-util = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-mersenne-31 = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-merkle-tree = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-symmetric = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-poseidon2 = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
+p3-uni-stark = { git = "https://github.com/zeropoolnetwork/Plonky3", rev = "5b53c08297c1589e1e9d16c9e4a6c60cce0e573a" }
 
 rand_core = "0.6.4"
 rand = "0.8.5"
@@ -48,7 +49,6 @@ dotenv = "0.15.0"
 tokio = "1.40.0"
 base64 = "0.22.1"
 toml = { version = "0.8.19" }
-m31jubjub = { git = "https://github.com/zeropoolnetwork/m31jubjub" }
 hex = "0.4.3"
 tower-http = "0.6.2"
 futures = "0.3.31"
