--- a/m31jubjub/Cargo.toml
+++ b/m31jubjub/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 
-p3-mersenne-31 = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/feature/cfft-symmetric-compatibility"}
-p3-field = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/feature/cfft-symmetric-compatibility"}
-p3-poseidon2 = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/feature/cfft-symmetric-compatibility"}
-p3-symmetric = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/feature/cfft-symmetric-compatibility"}
+p3-mersenne-31 = { workspace = true }
+p3-field = { workspace = true }
+p3-poseidon2 = { workspace = true }
+p3-symmetric = { workspace = true }
 
 ark-ff = "0.4.2"
 num-bigint = "0.4.6"
@@ -21,7 +21,7 @@ base58 = "0.2"
 
 
 
-bincode = { version = "1.3", default-features = false }
+bincode = { workspace = true, default-features = false }
 
 [dev-dependencies]
 serde = { version = "1.0", default-features = false, features = ["derive"] }
