--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -19,7 +19,6 @@ serde_json = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 serde = { workspace = true }
 bincode = { workspace = true }
-m31jubjub = { workspace = true }
 base64 = { workspace = true }
 p3-matrix = { workspace = true }
 tower-http = { workspace = true, features = ["trace"] }
@@ -29,3 +28,4 @@ common = { path = "../common" }
 primitives = { path = "../primitives" }
 snapshot-db = { path = "../snapshotdb" }
 shards = { path = "../shards" }
+m31jubjub = { path = "../m31jubjub" }
